# AccIII

./: .gitignore  .gitmodules  AccIII.sln
AccIII/: AccIII.cpp  AccIII.ilk  AccIII.vcxproj  AccIII.vcxproj.filters  DataProc.cpp  QTPathSetup.props  Start_VSCode.bat  USBComm.cpp  USBCommDlg.cpp  data_rate.txt  qcustomplot.cpp  sample_time.txt  window.cpp  window.ui
AccIII (obsolete)/: AccIII.vcxproj  AccIII.vcxproj.filters
AccIII (obsolete)/Debug/: vc140.idb
AccIII (obsolete)/Debug/AccIII.tlog/: AccIII.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
AccIIIDriver/: AccIII_example.cpp  CMakeLists.txt  README.txt
AccIIIDriver/include/AccIIIDriver/: AccIIIDecoder.h  AccIIIDriver.h  AccIIIDriver2.h  AccIIIListener.h
AccIIIDriver/src/: AccIIIDecoder.cpp  AccIIIDriver.cpp  AccIIIDriver2.cpp  AccIIIListener.cpp  FileManager.cpp
AccIIIDriver/tests/: AccIIIDecoderMock.cpp  AccIIIDecoderMock.h  AccIIIDriverMock.cpp  AccIIIDriverMock.h  AccIIIDriver_test - Copy.cpp  AccIIIDriver_test.cpp  AccIIIListenerMock.cpp  AccIIIListenerMock.h
AccIIIListener/: .cproject  .gitignore  .project  AccIIIListener.cpp  CMakeLists.txt  README.txt
AccIIIListener/include/AccIIIListener/: AccIIIDriver.h  AccIIIDriverMock.h  AccIIIDriver_defines.h  FileManager.h
AccIIIListener/libs/: CMakeLists.txt
AccIIIListener/src/: AccIIIDriver.cpp  AccIIIDriverMock.cpp  FileManager.cpp
AccIIIListener/tests/: AccIIIDriver_test.cpp
AccIIIListener_UC/: AccIII_reformatUC.cpp  CMakeLists.txt
AccIIIListener_UC/include/: DataProc.h  acciii.h
AccIIIListener_UC/src/: DataProc.cpp  acciii.cpp
AccIIIQtUI/AccIIIQtUI/: AccIII.cpp  AccIIIQtUI.pro  DataProc.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.h
AccIIIQtUI/AccIIIQtUI/include/: DataProc.h
AccIIIReader/: .cproject  .project  AccIIIReader.cpp  CMakeLists.txt
AccIIIReader/src/: AccIIIDriver.cpp
AccIIITwin/AccIII/: AccIII.sln  AccIII.vcxproj  AccIII.vcxproj.filters  AccIII_2_boards.cpp  DataProc_2_boards.cpp
AccIIITwin/AccIII/Debug/: AccIII.ilk  readAcc31onArm.m  readAccRevi.m
AccIIITwin/MATLAB_Analysis/: DataInspection.m  FsCorrection.csv  FullHandInspection.m  StimSignals.m  TwinAccMeasure.m  measureTimeCorrection.m  readAccRevi.m  segmentData.m  segmentDataOld.m  segmentDataOrigin.m
AccIIITwin/MATLAB_Analysis/RevIEEEFig_NontipLoc/: ColorbarRange.txt
AccIIITwin/headers/: DataProc_2_boards.h  stdafx.h
AccIII_Test_with_GalilMotor/: AccIII_Test_withLDV.m  Prepare_Stimuli.m  analyzeData.m  motorInitialization.m  motorShutdown.m
AccIII_Test_with_GalilMotor/DMC_file/: calibration.dmc  sine.dmc  streamOut.dmc
DataAnalysis/: AllAccWaveform_TapII.m  GestureIdentificationAnalysis.m  Index100HzSine.m  LocFreqResponse.m  ReconWaveImage.m  ReconstructWave.m  ReconstructWaveByPhase.m  ReconstructWave_demo.m  spectr.m
Debug/: AccIII.ilk  AccIII_Display.m  AccIII_Display_NoID.m  AccIII_Display_NoID_format.m  CaliberateLDV_ADC_Ratio.m  DemoAccIII.py  LDV_Validation.m  PhantomSkinDisplay.m  SignalWaveformDisplay.m  centerPoint.m  decodeAccIII.m  readAcc1to9.m  readAccIII.m  readAccRevi.m  spectr.m  syncAccIII.m  test.mat
FPGAProgram/Acc11to19/: Acc11to19.xpr
FPGAProgram/Acc11to19/Acc11to19.cache/wt/: java_command_handlers.wdf  project.wpc  synthesis.wdf  webtalk_pa.xml
FPGAProgram/Acc11to19/Acc11to19.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_3.xml
FPGAProgram/Acc11to19/Acc11to19.runs/clk_wiz_0_synth_1/: clk_wiz_0.tcl  clk_wiz_0_utilization_synth.pb  gen_run.xml  project.wdf  vivado.pb
FPGAProgram/Acc11to19/Acc11to19.runs/impl_1/: .opt_design.begin.rst  .vivado.begin.rst  .write_bitstream.begin.rst  async_245_fifo.bit  async_245_fifo.tcl  async_245_fifo.vdi  async_245_fifo_13032.backup.vdi  async_245_fifo_19372.backup.vdi  async_245_fifo_clock_utilization_routed.rpt  async_245_fifo_control_sets_placed.rpt  async_245_fifo_drc_opted.rpt  async_245_fifo_drc_routed.rpt  async_245_fifo_io_placed.rpt  async_245_fifo_opt.dcp  async_245_fifo_placed.dcp  async_245_fifo_power_routed.rpt  async_245_fifo_power_routed.rpx  async_245_fifo_power_summary_routed.pb  async_245_fifo_route_status.pb  async_245_fifo_route_status.rpt  async_245_fifo_routed.dcp  async_245_fifo_timing_summary_routed.rpt  async_245_fifo_timing_summary_routed.rpx  async_245_fifo_utilization_placed.pb  async_245_fifo_utilization_placed.rpt  gen_run.xml  init_design.pb  opt_design.pb  place_design.pb  route_design.pb  runme.sh  usage_statistics_webtalk.html  usage_statistics_webtalk.xml  vivado.jou  vivado.pb  vivado_13032.backup.jou  vivado_13468.backup.jou  vivado_16876.backup.jou  vivado_19372.backup.jou  vivado_5284.backup.jou  (+1 more)
FPGAProgram/Acc11to19/Acc11to19.runs/synth_1/: .vivado.begin.rst  async_245_fifo.dcp  async_245_fifo.tcl  async_245_fifo.vds  async_245_fifo_utilization_synth.pb  async_245_fifo_utilization_synth.rpt  gen_run.xml  project.wdf  runme.sh  vivado.jou  vivado.pb
FPGAProgram/Acc1to9/: Acc1to9.xpr  vivado.jou  vivado_19280.backup.jou  vivado_6396.backup.jou
FPGAProgram/Acc1to9/Acc1to9.cache/wt/: java_command_handlers.wdf  project.wpc  synthesis.wdf  (+1 more)
FPGAProgram/AccRevive/: AccRevive.xpr  vivado.jou  vivado_11644.backup.jou  vivado_13292.backup.jou  vivado_8036.backup.jou
FPGAProgram/Final_400K_DeviceID_with_value/: 400K_DeviceID_with_value.xpr  vivado.jou
FPGAProgram/Final_Overclock_DeviceID_with_value/: 400K_DeviceID_with_value.xpr  vivado.jou  vivado_8064.backup.jou
FPGAProgram/No_fifo_no_ID/: No_fifo_no_ID.xpr  vivado.jou  vivado_pid8236.str
FPGAProgram/Simdata/Simallacc/: Simallacc.xpr
FPGAProgram/Simdata/Simdatablinkled/: Simdatablinkled.xpr
FPGAProgram/Simdata/Simdatastream/: Simdatastream.xpr
FPGAProgram/Simdata/Simdatatiming/: Simdatatiming.xpr  vivado.jou
LDV/: LDV.m  analyzeData.m
WaveReconstructModel/: ObjModel.m  SimRadius128mm_digitII_tip.mat  SimRadius64mm_StepSize2mm_120Degree_42Acc.mat  WaveReconModel.m  temp_256mm-DESKTOP-QMI73SF.mat  temp_256mm.mat
WaveReconstruction/: LoadHandModel.m  ObjModel.m
headers/: DataProc.h  USBComm.h  USBCommDlg.h  ui_window.h  window.h
(+699 files in other folders)
